--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,8 @@ html {
   animation: hand-rotate .5s linear infinite;
 }
 
-@@keyframes hand-rotate {
+@keyframes hand-rotate {
+
   0% {
     transform: rotate(0deg);
   }
@@ -46,6 +47,7 @@ html {
   100% {
     transform: rotate(360deg);
   }
+
 }
 
 .hand-hour {
